--- a/Startuply_HTML/assets/css/style.css
+++ b/Startuply_HTML/assets/css/style.css
@@ -7808,6 +7808,11 @@ blockquote {
 
 .comp-pics{
 	width: 912px;
+	height: 551px;
+}
+
+.comp-pics-1{
+	width: 912px;
 	height: 601px;
 }
 
@@ -7815,6 +7820,10 @@ blockquote {
 	 .comp-pics{
 		 width: 300px;
 		 height: 170px;
+	}
+	.comp-pics-1{
+		width: 300px;
+		height: 170px;
 	}
 }
 
