--- a/Startuply_HTML/assets/css/style.css
+++ b/Startuply_HTML/assets/css/style.css
@@ -1874,19 +1874,13 @@ input[type=password] {
 	-webkit-box-shadow: none;
 	-moz-box-shadow: none;
 	box-shadow: none;
-	margin: 0;
-	vertical-align: top;
-	display: inline-block;
+	display: block;
 	width: 100%;
-	font-size: 17px;
+	height: 34px;
+	font-size: 14px;
 	color: #8d8d8d;
-	background-color: #ffffff;
-	border-style: solid;
-	border-width: 1px 1px 1px 3px;
-	border-top-color: #d7d7d7;
-	border-right-color: #d7d7d7;
-	border-bottom-color: #d7d7d7;
-	outline: none;
+	background-color: rgb(250, 255, 189);
+	border: 1px solid #ccc;
 }
 
 textarea:hover,
@@ -7814,6 +7808,7 @@ blockquote {
 .comp-pics-1{
 	width: 912px;
 	height: 601px;
+	margin-bottom: -47px;
 }
 
 @media (min-width: 168px) and (max-width: 991px){
@@ -7827,3 +7822,74 @@ blockquote {
 	}
 }
 
+.login-label{
+	color: #2a3a4b;
+}
+
+.login-label label{
+	display: inline-block;
+	max-width: 100%;
+	margin-bottom: 5px;
+	font-weight: 700;
+}
+
+.login-label > .form-control{
+	width: 20px;
+}
+
+.scrollable-menu {
+    height: auto;
+    max-height: 600px;
+    overflow-x: hidden;
+}
+
+.dropdown-menu li a {
+	padding: 5px 20px;
+	color: #fff;
+}
+
+.btn-linkedin {
+	color: #fff;
+	background-color: #007bb6;
+	border-color: rgba(0,0,0,0.2);
+}
+.btn-facebook {
+	color: #fff;
+	background-color: #3b5998;
+	border-color: rgba(0,0,0,0.2);
+}
+.btn-twitter {
+	color: #fff;
+	background-color: #55acee;
+	border-color: rgba(0,0,0,0.2);
+}
+
+.splash-btn {
+	padding: 6px 12px;
+	margin-bottom: 0;
+	font-size: 14px;
+	font-weight: 400;
+	line-height: 1.42857143;
+	text-align: center;
+	white-space: nowrap;
+	vertical-align: middle;
+	cursor: pointer;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	touch-action: manipulation;
+	background-image: none;
+	border: 1px solid transparent;
+	border-radius: 4px;
+	-webkit-transition: none !important;
+	transition: none !important;
+}
+
+.btn-social {
+	position: relative;
+	padding-left: 42px !important;
+	text-align: left;
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
+}
