--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -711,7 +711,7 @@ blockquote:after {
 }
 
 .section .section-header {
-	margin: 30px 0 80px;
+	margin: 30px 0px 30px;
 }
 
 /* ----------------------------------------------------------------------------
@@ -5638,7 +5638,7 @@ body.always-mobile .fixed-menu .navigation-header.white-dropdown .navigation-bar
 }
 
 .features-section {
-	padding-bottom: 70px;
+	padding-bottom: 200px;
 	background-color: #f0f0f0;
 }
 
@@ -7892,4 +7892,8 @@ blockquote {
 	white-space: nowrap;
 	overflow: hidden;
 	text-overflow: ellipsis;
+}
+
+.client-header{
+	margin-bottom: -20px;
 }
