--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5425,7 +5425,7 @@ body.always-mobile .fixed-menu .navigation-header.white-dropdown .navigation-bar
 	-moz-background-size: cover;
 	background-size: cover;
 	position: relative;
-	background-image: url("../img/background/low_poly_background.jpg");
+	/*background-image: url("../img/background/low_poly_background.jpg");*/
 	background-repeat: no-repeat;
 	background-position: top center;
 	background-attachment: fixed;
